Changed margins and font-weight

--- a/css/main.css
+++ b/css/main.css
@@ -100,7 +100,13 @@ body li {
 }
 
 .section-title--mb50 {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
+}
+
+@media (min-width: 1200px) {
+  .section-title--mb50 {
+    margin-bottom: 50px;
+  }
 }
 
 /*END Rules used for all pages of this project */
@@ -267,6 +273,12 @@ p {
 @media (min-width: 768px) {
   .page-header__nav-list {
     margin-left: 88px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .page-header__nav-list {
+    margin-left: 0;
   }
 }
 
@@ -766,7 +778,7 @@ p {
   height: 70px;
   background: rgba(47, 48, 58, 0.8);
   font-size: 14px;
-  font-weight: 500;
+  font-weight: 700;
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
