--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -50,6 +50,9 @@
         @media (min-width: 768px){
           margin-left: 88px;
         }
+        @media (min-width: 1200px){
+          margin-left: 0;
+        }
     }
     &__nav-item:not(:last-child){
       @media (min-width: 768px){
